@@ -1,0 +1,11 @@
+SET(OBD_SIMGEN_MEGASQUIRT "Off")
+# SET(OBD_SIMGEN_MEGASQUIRT "On" CACHE BOOL "Enable megasquirt obdsim generator")
+IF(OBD_SIMGEN_MEGASQUIRT)
+	FILE(GLOB OBDSIMGEN_MEGASQUIRT_SRCS
+		generators/megasquirt/*.c
+	)
+	ADD_LIBRARY(ckobdsim_cycle STATIC ${OBDSIMGEN_MEGASQUIRT_SRCS})
+	SET(GENERATOR_LIBS ${GENERATOR_LIBS} ckobdsim_cycle)
+	ADD_DEFINITIONS(-DOBDSIMGEN_MEGASQUIRT)
+ENDIF(OBD_SIMGEN_MEGASQUIRT)
+
